--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "dangus_next",
+  "name": "old_dangusjs",
   "version": "0.1.0",
-  "main": "src/index.js",
-  "license": "NONE",
+  "main": "src/main.js",
+  "license": "UNLICENSED",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' nodemon src/app.js",
+    "dev": "nodemon --inspect='0.0.0.0:9229'",
     "lint": "eslint ."
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "got": "^11.8.2",
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/preset-env": "^7.15.6",
     "@types/express": "^4.17.13",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.12",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
+  },
+  "_moduleAliases": {
+    "@": "src/"
   }
 }
